--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -46,7 +46,7 @@
           <p>{{user.interests}}</p>
         </tab>
         <tab heading="Photos">
-          <ngx-gallery [options]="gallerOptions" [images]="galleryImages"></ngx-gallery>
+          <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
         </tab>
         <tab headings="Messages">
           <p>Messages will go here</p>
