--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -16,7 +16,7 @@
   
       <div *ngIf="loggedIn()" class="dropdown" dropdown>
         <span class="mr-1">
-          <img src="{{photoUrl}}" alt="broken">
+          <img src="{{photoUrl || '../../assets/user.png'}}" alt="broken">
         </span>
           <a class="dropdown-toggle text-light" dropdownToggle>
             Welcome {{authService.decodedToken?.unique_name | titlecase}}
